deployments/esphome/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: esphome
          image: "ghcr.io/esphome/esphome:stable"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 6052
          volumeMounts:
            - name: config
              mountPath: /config
            - name: usb
              mountPath: /dev/usb
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: esphome
        - name: usb
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice
