deployments/esphome/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app.kubernetes.io/name: esphome
  ports:
    - name: http
      port: 6052
      targetPort: 6052
